[project]
name = "frost-warsaw"
version = "0.1.0"
description = ""
authors = [
    {name = "Patryk",email = "pbojarski94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas"
]

[tool.poetry]
packages = [{include = "frost_warsaw", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
